# Base-Calculator

./: Auxiliadora.cpp  Auxiliadora.h  CMakeLists.txt  Conversor.cpp  Conversor.h  Divisora.cpp  Divisora.h  Multiplicadora.cpp  Multiplicadora.h  Somadora.cpp  Somadora.h  Subtradora.cpp  Subtradora.h  Validadora.cpp  Validadora.h  main.cpp  testes.cpp
